NIFI-7624: ListenFTP processor: fixed a bug that prevented building the project with Java 8